HTML Uebung 2 ist done

--- a/index.html
+++ b/index.html
@@ -6,6 +6,37 @@
     <title>HTML Übung 1</title>
 </head>
 <body>
+    <h1>Nicole</h1>
+    <h2>Demnächst krasse IT-lerin</h2>
+    <ul>
+        <li><a href="/home">Home</a></li>
+        <li><a href="/contact">Kontakt</a></li>
+    </ul>
+    <main>
+        <section>
+            <h3>Etwas über mich</h3>
+            <p>Ich bin ein Student bei Techstarter.</p>
+        </section>
+        <section>
+            <h3>Skills</h3>
+            <p>Mit diesen Tools und Sprachen arbeite In jeden Tag</p>
+            <ul>
+                <li>VSCode</li>
+                <li>CLI</li>
+                <li>Linux</li>
+                <li>Python</li>
+                <li>HTML</li>
+            </ul>
+        </section>
+        <h3>Kontakt</h3>
+        <p>Über das Kontaktformular kannst du mich erreichen:</p>
+        <footer>
+            <h3>Credits</h3>
+            <p>Vielen Dank an Techstarter:</p>
+            <a href="https://techstarter.de/" target="_blank">Techstarter.de</a>
+        </footer>
+    </main>
+
     
 </body>
 </html>
