--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML Übung 1</title>
+    <title>Nicoles Portfolio</title>
 </head>
 <body>
     <h1>Nicole</h1>
@@ -19,7 +19,7 @@
         </section>
         <section>
             <h3>Skills</h3>
-            <p>Mit diesen Tools und Sprachen arbeite In jeden Tag</p>
+            <p>Mit diesen Tools und Sprachen arbeite ich jeden Tag</p>
             <ul>
                 <li>VSCode</li>
                 <li>CLI</li>
